--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Become a Facilitator</title>
 
-    <link rel="stylesheet" href="../src/index.css">
+    <link rel="stylesheet" href="./index.css">
     <script defer src="../src/index.js"></script>
   </head>
   <body>
