--- a/public/index.html
+++ b/public/index.html
@@ -4,9 +4,18 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    
     <title>Become a Facilitator</title>
 
+    <!-- google font -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
+    
+    <!-- custom stylesheet -->
     <link rel="stylesheet" href="./index.css">
+
+    <!-- entry point of react app -->
     <script defer src="../src/index.js"></script>
   </head>
   <body>
