complete footer section

--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,9 @@
     <!-- custom stylesheet -->
     <link rel="stylesheet" href="./index.css">
 
+    <!-- scroll-reveal plugin -->
+    <!-- <script src="https://unpkg.com/scrollreveal"></script> -->
+
     <!-- entry point of react app -->
     <script defer src="../src/index.js"></script>
   </head>
