--- a/public/index.html
+++ b/public/index.html
@@ -10,8 +10,8 @@
     <!-- custom stylesheet -->
     <link rel="stylesheet" href="./index.css">
 
-    <!-- scroll-reveal plugin -->
-    <!-- <script src="https://unpkg.com/scrollreveal"></script> -->
+    <!-- favicon -->
+    <link rel="shortcut icon" href="./favicon.ico" type="image/x-icon">
 
     <!-- entry point of react app -->
     <script defer src="../src/index.js"></script>
