--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="./index.css">
 
     <!-- favicon -->
-    <link rel="shortcut icon" href="./favicon.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="./fav.png" type="image/x-icon">
 
     <!-- entry point of react app -->
     <script defer src="../src/index.js"></script>
